# awesome-genai

./: .gitignore  README.md
fastrtc/: index.html  main.py
gke-agents/: README.md  deployment_metadata.json  pyproject.toml  tools.yaml
gke-agents/app/: agent_engine_app.py
gke-agents/app/utils/: tracing.py  (+1 more)
marketing-short/: main.py
marketing-short/utils/: ce_audio.py  gen_video.py
media-gen/: .dockerignore  .env.example  Dockerfile  README.md  live_api.py  main.py  quickstart.sh  requirements.txt  skaffold.yaml
media-gen/handlers/: chat_handlers.py  media_handlers.py
media-gen/models/: config.py  exceptions.py
media-gen/resources/: kustomization.yaml  media-gen-service.yaml
media-gen/ui/: components.py
media-gen/utils/: acceptance.py  auth.py  ce_audio.py  ce_image.py  gen_image.py  gen_video.py  gen_video.py_old  google.py  llm.py
pydantic-ai/: main.py
rrd-graph/: README.md  chirp-v2.py  kidbot.py  requirements.txt  sample.md  skaffold.yaml  streaming-speech.py  text-speech.py
rrd-graph/analysis/: main.py  pyproject.toml  re.shared  requirements.txt  skaffold.yaml
rrd-graph/analysis/resources/: analysis-service.yaml  kustomization.yaml
rrd-graph/analysis/utiles/: playbook_tools.py  sentiment.py
rrd-graph/browserless/: README.md  skaffold.yaml
rrd-graph/console/: c_utils.py  main.py  requirements.txt  skaffold.yaml
rrd-graph/loadgen/: README.md  deploy.run  main.py  requirements.txt  skaffold.yaml
rrd-graph/moderator-agent/: langgraph.json  prompt.md
rrd-graph/nexus/: Procfile  main.py  pyproject.toml  requirements.txt  skaffold.yaml
rrd-graph/nexus/resources/: kustomization.yaml  nexus-service.yaml
rrd-graph/nexus/utils/: ctl_request.py  job.py
rrd-graph/rrd-agent/: langgraph.json  main.py  pyproject.toml  re.shared
rrd-graph/rrd-agent/agent/: requirements.txt  rrd_agent.py
rrd-graph/rrd-agent/agent/shared/: llm.py
rrd-graph/rrd-agent/agent/shared/db/: tb_platforms.py  tb_playbook.py
rrd-graph/rrd-agent/agent/tools/: google.py  history.py  keywords.py  rrd.py  rrd_backend.py  rrd_playbook.py  rrd_sentiment.py
rrd-graph/scraping-job/: README.md  main.py  pyproject.toml  requirements.txt  skaffold.yaml
rrd-graph/scraping-job/resources/: kustomization.yaml  scraping-job.yaml
rrd-graph/scraping-job/tools/: firestore_db.py  google_search.py  instagram.py  tweets_scraper.py
rrd-graph/shared/: llm.py
story-gen/: main.py  pyproject.toml  requirements.txt
trendspotting/: main.py
trendspotting/utils/: google.py  llm.py
ultimate-farkle/: history.json  langgraph.json  main.py
(+33 files in other folders)
