[tool.poetry]
name = "nexus"
version = "0.1.0"
description = ""
authors = ["CC <46365490+cc4i@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
google-cloud-run = "^0.10.10"
google-cloud-scheduler = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
