[tool.poetry]
name = "graph-agent"
version = "0.1.0"
description = ""
authors = ["CC <46365490+cc4i@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pg8000 = "^1.31.2"
sqlalchemy = "^2.0.36"
pytz = "^2024.2"
langchain-google-genai = "^2.0.4"
langchain-google-vertexai = "^2.0.7"
pydantic = "^2.9.2"
anthropic = "^0.38.0"
langchain-anthropic = "^0.2.4"
google-cloud-aiplatform = "^1.71.1"
google-auth = "^2.35.0"
google-cloud-alloydb-connector = "^1.4.0"
gradio = "^5.4.0"
langgraph = "^0.2.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
