[tool.poetry]
name = "scraping-job"
version = "0.1.0"
description = ""
authors = ["CC <46365490+cc4i@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tweepy = "^4.14.0"
nltk = "^3.9.1"
numpy = "^2.1.3"
langchain-anthropic = "^0.2.4"
langchain-core = "^0.3.15"
langchain-google-vertexai = "^2.0.7"
pydantic = "^2.9.2"
google-cloud-run = "^0.10.10"
google-cloud-scheduler = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
